trabajo del apartado de pelicula

--- a/resources/scss/mycustom.scss
+++ b/resources/scss/mycustom.scss
@@ -1,5 +1,6 @@
 
 $primary: #d3938a;
+$secondary: #C57165;
 $info: #342421;
 $success: #75a761;
 $warning: #f29729;
@@ -10,6 +11,7 @@ $white: $light;
 
 $theme-colors: (
   "primary": $primary,
+  "secondary": $secondary,
   "info": $info,
   "success": $success,
   "warning": $warning,
