--- a/resources/scss/mycustom.css
+++ b/resources/scss/mycustom.css
@@ -30,6 +30,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #d3938a;
+  --bs-secondary: #C57165;
   --bs-info: #342421;
   --bs-success: #75a761;
   --bs-warning: #f29729;
@@ -38,6 +39,7 @@
   --bs-dark: #140F0E;
   --bs-white: #f8f8f7;
   --bs-primary-rgb: 211, 147, 138;
+  --bs-secondary-rgb: 197, 113, 101;
   --bs-info-rgb: 52, 36, 33;
   --bs-success-rgb: 117, 167, 97;
   --bs-warning-rgb: 242, 151, 41;
@@ -46,7 +48,7 @@
   --bs-dark-rgb: 20, 15, 14;
   --bs-white-rgb: 248, 248, 247;
   --bs-primary-text-emphasis: #543b37;
-  --bs-secondary-text-emphasis: #2b2f32;
+  --bs-secondary-text-emphasis: #4f2d28;
   --bs-success-text-emphasis: #2f4327;
   --bs-info-text-emphasis: #150e0d;
   --bs-warning-text-emphasis: #613c10;
@@ -54,7 +56,7 @@
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #f6e9e8;
-  --bs-secondary-bg-subtle: #e2e3e5;
+  --bs-secondary-bg-subtle: #f3e3e0;
   --bs-success-bg-subtle: #e3eddf;
   --bs-info-bg-subtle: #d6d3d3;
   --bs-warning-bg-subtle: #fcead4;
@@ -62,7 +64,7 @@
   --bs-light-bg-subtle: #f8f9f9;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #edd4d0;
-  --bs-secondary-border-subtle: #c4c8cb;
+  --bs-secondary-border-subtle: #e8c6c1;
   --bs-success-border-subtle: #c8dcc0;
   --bs-info-border-subtle: #aea7a6;
   --bs-warning-border-subtle: #fad5a9;
@@ -142,7 +144,7 @@
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
   --bs-primary-text-emphasis: #e5beb9;
-  --bs-secondary-text-emphasis: #a7acb1;
+  --bs-secondary-text-emphasis: #dcaaa3;
   --bs-success-text-emphasis: #accaa0;
   --bs-info-text-emphasis: #857c7a;
   --bs-warning-text-emphasis: #f7c17f;
@@ -150,7 +152,7 @@
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #2a1d1c;
-  --bs-secondary-bg-subtle: #161719;
+  --bs-secondary-bg-subtle: #271714;
   --bs-success-bg-subtle: #172113;
   --bs-info-bg-subtle: #0a0707;
   --bs-warning-bg-subtle: #301e08;
@@ -158,7 +160,7 @@
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
   --bs-primary-border-subtle: #7f5853;
-  --bs-secondary-border-subtle: #41464b;
+  --bs-secondary-border-subtle: #76443d;
   --bs-success-border-subtle: #46643a;
   --bs-info-border-subtle: #1f1614;
   --bs-warning-border-subtle: #915b19;
@@ -1946,13 +1948,13 @@ progress {
 
 .table-secondary {
   --bs-table-color: #000;
-  --bs-table-bg: #e2e3e5;
-  --bs-table-border-color: #b5b6b7;
-  --bs-table-striped-bg: #d7d8da;
+  --bs-table-bg: #f3e3e0;
+  --bs-table-border-color: #c2b6b3;
+  --bs-table-striped-bg: #e7d8d5;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #cbccce;
+  --bs-table-active-bg: #dbccca;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d1d2d4;
+  --bs-table-hover-bg: #e1d2cf;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -3023,6 +3025,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #d3938a;
 }
 
+.btn-secondary {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #C57165;
+  --bs-btn-border-color: #C57165;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #ce867c;
+  --bs-btn-hover-border-color: #cb7f74;
+  --bs-btn-focus-shadow-rgb: 167, 96, 86;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #d18d84;
+  --bs-btn-active-border-color: #cb7f74;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #C57165;
+  --bs-btn-disabled-border-color: #C57165;
+}
+
 .btn-info {
   --bs-btn-color: #f8f8f7;
   --bs-btn-bg: #342421;
@@ -3156,6 +3175,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #d3938a;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #d3938a;
+  --bs-gradient: none;
+}
+
+.btn-outline-secondary {
+  --bs-btn-color: #C57165;
+  --bs-btn-border-color: #C57165;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #C57165;
+  --bs-btn-hover-border-color: #C57165;
+  --bs-btn-focus-shadow-rgb: 197, 113, 101;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #C57165;
+  --bs-btn-active-border-color: #C57165;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #C57165;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #C57165;
   --bs-gradient: none;
 }
 
@@ -4860,6 +4896,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-primary-text-emphasis);
 }
 
+.alert-secondary {
+  --bs-alert-color: var(--bs-secondary-text-emphasis);
+  --bs-alert-bg: var(--bs-secondary-bg-subtle);
+  --bs-alert-border-color: var(--bs-secondary-border-subtle);
+  --bs-alert-link-color: var(--bs-secondary-text-emphasis);
+}
+
 .alert-info {
   --bs-alert-color: var(--bs-info-text-emphasis);
   --bs-alert-bg: var(--bs-info-bg-subtle);
@@ -5221,6 +5264,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-primary-bg-subtle);
   --bs-list-group-active-bg: var(--bs-primary-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-primary-text-emphasis);
+}
+
+.list-group-item-secondary {
+  --bs-list-group-color: var(--bs-secondary-text-emphasis);
+  --bs-list-group-bg: var(--bs-secondary-bg-subtle);
+  --bs-list-group-border-color: var(--bs-secondary-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-secondary-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-secondary-border-subtle);
+  --bs-list-group-active-color: var(--bs-secondary-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-secondary-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-secondary-text-emphasis);
 }
 
 .list-group-item-info {
@@ -6815,6 +6871,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-primary-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-secondary {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-secondary-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .text-bg-info {
   color: #f8f8f7 !important;
   background-color: RGBA(var(--bs-info-rgb), var(--bs-bg-opacity, 1)) !important;
@@ -6857,6 +6918,15 @@ textarea.form-control-lg {
 .link-primary:hover, .link-primary:focus {
   color: RGBA(220, 169, 161, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(220, 169, 161, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-secondary {
+  color: RGBA(var(--bs-secondary-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-secondary-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-secondary:hover, .link-secondary:focus {
+  color: RGBA(209, 141, 132, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(209, 141, 132, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-info {
@@ -7330,6 +7400,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-primary-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-secondary {
+  --bs-focus-ring-color: rgba(var(--bs-secondary-rgb), var(--bs-focus-ring-opacity));
+}
+
 .focus-ring-info {
   --bs-focus-ring-color: rgba(var(--bs-info-rgb), var(--bs-focus-ring-opacity));
 }
@@ -7481,6 +7555,11 @@ textarea.form-control-lg {
 .border-primary {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-primary-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-secondary {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-secondary-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-info {
@@ -8435,6 +8514,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-secondary {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-info {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-info-rgb), var(--bs-text-opacity)) !important;
@@ -8632,6 +8716,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-primary-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-secondary {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-secondary-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline-info {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-info-rgb), var(--bs-link-underline-opacity)) !important;
@@ -8723,6 +8812,11 @@ textarea.form-control-lg {
 .bg-primary {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-secondary {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-info {
