--- a/resources/css/mystylesheet.css
+++ b/resources/css/mystylesheet.css
@@ -1,13 +1,18 @@
 * {
-    font-family: "Playfair Display", serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
+	font-family: "Playfair Display", serif;
+	font-optical-sizing: auto;
+	font-weight: 600;
+	font-style: normal;
 }
 
 .card:hover {
-    transform: scale(1.05);
-    transition: transform 0.3s ease;
-    z-index: 1;
-    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
+	transform: scale(1.05);
+	transition: transform 0.3s ease;
+	z-index: 1;
+	box-shadow: 0px 0px -11.9px rgba(0, 0, 0, 0.064),
+		0px 0px -4.7px rgba(0, 0, 0, 0.081), 0px 0px 5.5px rgba(0, 0, 0, 0.09),
+		0px 0px 16.9px rgba(0, 0, 0, 0.095), 0px 0px 29.1px rgba(0, 0, 0, 0.097),
+		0px 0px 41.5px rgba(0, 0, 0, 0.098), 0px 0px 53.7px rgba(0, 0, 0, 0.098),
+		0px 0px 65.3px rgba(0, 0, 0, 0.097), 0px 0px 75.2px rgba(0, 0, 0, 0.096),
+		0px 0px 72px rgba(0, 0, 0, 0.1);
 }
