--- a/resources/css/mystylesheet.css
+++ b/resources/css/mystylesheet.css
@@ -18,16 +18,19 @@
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* Asegura que el cuerpo ocupe al menos toda la altura de la ventana */
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh; /* Asegura que el cuerpo ocupe al menos toda la altura de la ventana */
 }
 
 footer {
-    margin-top: auto; /* Empuja el footer hacia abajo */
+	margin-top: auto; /* Empuja el footer hacia abajo */
 }
 
-.texto-pequeño{
+.texto-pequeño {
 	font-size: 0.5rem;
 }
 
+.box-shadow-login-register {
+	box-shadow: 0px 0px 80px rgba(211, 147, 138, 0.35);
+}
